--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/selo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="SELO will aim to have users connect their social media to our web app. Following this connection, our in-house statistical procedure will digest the metadata from their social media and output a single standardized score for their social output - which is referred to as the ‘SELO Score’. The goal is to create a web app that will that will incorporate the below wireframe, design, and functionality. There will also be the matter of integrating the statistical procedure that is currently being developed into the back-end in order to output the correct SELO Score. Features and requirements for the web app can be found below, but if you have any questions or concerns - please contact me directly."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/selo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SELO Web App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
